--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "author": "Markus Englund",
   "license": "MIT",
+  "homepage": "https://bergutman.github.io/great-circle-map/",
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.53",
     "babel-polyfill": "^6.26.0",
@@ -70,6 +71,7 @@
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.10.0",
+    "gh-pages": "^2.0.1",
     "jest": "^23.4.1",
     "node-sass": "^4.9.2",
     "patch-package": "^5.1.1",
